<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"> 왔다갔다 </string>
    <string name="team_name"> again2019 </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example_1_title">Example 1</string>
    <string name="example_1_subtitle">Multiple selection, horizontal scrolling, shows usage of \"maxRowCount\" property to switch between week and month modes. Also shows usage of OutDateStyle \"endOfRow\".</string>
    <string name="example_2_title">Example 2</string>
    <string name="example_2_subtitle">Month header view, single selection, vertical scrolling, hides in and out dates.</string>
    <string name="example_3_title">Example 3</string>
    <string name="example_3_subtitle">Event style implementation, day labels as header view, single selection, month scroll listener. Similar to what is in the Google Calendar app.</string>
    <string name="example_4_title">Example 4</string>
    <string name="example_4_subtitle">Continuous selection within one month and across multiple months, dates older than the current day are disabled. Similar to what is in the Airbnb app.</string>
    <string name="example_5_title">Example 5</string>
    <string name="example_5_subtitle">Single selection, programmatic calendar scrolling, generates six rows for all months showing \"endOfGrid\" implementation of \"outDateStyle\" option. A flight schedule calender.</string>
    <string name="example_6_title">Example 6</string>
    <string name="example_6_subtitle">Custom date width and height, custom month view, item decoration on the CalendarView, continuous horizontal scrolling style.</string>
    <string name="example_7_title">Example 7</string>
    <string name="example_7_subtitle">Week mode calendar with single selection. Shows usage of \"hasBoundaries\" and  \"maxRowCount\" properties.</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="example_3_input_dialog_title">Enter event title</string>
    <string name="example_3_empty_input_text">Text is empty</string>
    <string name="example_3_dialog_delete_confirmation">Delete this event?</string>
    <string name="delete">Delete</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="clear">Clear</string>
    <string name="week_mode">Week mode</string>


    <!-- Splash -->
    <string name="some_id">왔다갔다...\n시간 너무 아깝지 않나요?\n하루를 48시간으로 사는 법!</string>


    <!-- firstInput Fragment -->
    <string name="input_nickname">사용하실 <b>닉네임</b>을 입력해주세요.</string>


    <!-- all -->
    <string name="success"> 성공 </string>
    <string name="fail"> 실패 </string>

    <!-- 로그인 관련 string -->
    <string name="login_ment1"> 왔다갔다와\n자투리 시간 관리를 시작해봐요. </string>
    <string name="login_ment2"> 더이상 통학/통근 시간이 아깝다는 생각이 안드실거에요! </string>
    <string name="login_ment3"> 이메일로 로그인</string>
    <string name="login_ment4"> 아직 회원이 아니신가요? </string>
    <string name="login_ment5"> <u>회원가입 하기</u> </string>
    <string name="login_ment6"> 구글 로그인으로 빠르게 시작하기 </string>
    <string name="login_ment7"> 로그인 </string>
    <string name="login_ment8"> 이메일 </string>
    <string name="login_ment9"> 과 </string>
    <string name="login_ment10"> 비밀번호 </string>
    <string name="login_ment11"> 를 </string>
    <string name="login_ment12"> 입력해주세요! </string>
    <string name="login_ment13"> 이메일을 입력해주세요. </string>
    <string name="login_ment14"> 비밀번호를 입력해주세요. </string>
    <string name="login_ment15"> 비밀번호를 잊어버렸다면? > </string>
    <string name="login_ment16"> 비밀번호 찾기 </string>
    <string name="login_ment17"> 가입한 이메일 계정을 입력해주세요. </string>
    <string name="login_ment18"> 비밀번호 재설정 </string>
    <string name="login_ment19"> 비밀번호를 잊어버렸다면? </string>
    <string name="login_ment20"> 회원 가입 </string>
    <string name="login_ment21"> 사용하실 </string>
    <string name="login_ment22"> 비밀번호를 잊어버렸다면? </string>
    <string name="login_ment23"> 비밀번호를 한번 더 입력해주세요. </string>
    <string name="login_ment24"> 회원가입 하기 </string>


    <!-- 로그인 toast 관련 string -->
    <string name="login_success"> 로그인 성공 </string>
    <string name="login_fail"> 로그인 실패 </string>
    <string name="email_again"> 이메일을 다시 입력해주세요. </string>
    <string name="password_again"> 비밀번호를 다시 입력해주세요. </string>
    <string name="password_again_short"> 비밀번호가 너무 짧아요. 비밀번호를 다시 입력해주세요. </string>
    <string name="password_correct"> 비밀번호를 다시 확인해주세요. </string>

    <string name="email_invalid"> 이메일이 유효하지 않습니다. </string>
    <string name="email_link_send_success"> 이메일 링크가 발송되었습니다. </string>
    <string name="email_link_send_fail"> 이메일 링크 발송이 실패했습니다. </string>
    <string name="sign_up_success"> 회원 가입 성공 </string>
    <string name="sign_up_fail"> 회원 가입 실패 </string>
    <string name="auto_login_fail"> 자동 로그인 실패 </string>

    <!-- input 관련 string -->
    <string name="input_ment1"> 닉네임 입력 </string>
    <string name="input_ment2"> 만나서 반가워요! </string>
    <string name="input_ment3"> 사용하실 </string>
    <string name="input_ment4"> 닉네임 </string>
    <string name="input_ment5"> 을 입력해주세요. </string>
    <string name="input_ment6"> 닉네임을 입력해주세요. </string>
    <string name="input_ment7"> 다음 단계로 가기 </string>
    <string name="input_ment8"> 3단계 남았어요! </string>
    <string name="input_ment9"> 닉네임을 입력해주세요. </string>
    <string name="input_ment10"> 직업 입력 </string>
    <string name="input_ment11"> 2단계 남았어요! </string>
    <string name="input_ment12"> ㅇㅇㅇ </string>
    <string name="input_ment13"> 님! </string>
    <string name="input_ment14"> 직업을 입력해주세요. </string>
    <string name="input_ment15"> ex) 학생, 직장인 </string>
    <string name="input_ment16"> 다음 단계로 가기 </string>
    <string name="input_ment17"> 자기계발 입력 </string>
    <string name="input_ment18"> 거의 다 왔어요! </string>
    <string name="input_ment19"> 어떤 자기계발을 하실 건가요? </string>
    <string name="input_ment20"> 시작하기 </string>


    <!-- input toast 관련 string -->
    <string name="check_input_fail"> 입력하신 정보를 불러올 수 없습니다. </string>
    <string name="nickname_input_fail"> 닉네임을 입력하세요. </string>
    <string name="nickname_input_long_fail"> 닉네임이 너무 길어요. </string>
    <string name="chip_no_selected"> 통근/통학 시간에 하고싶은 일을 선택해주세요. </string>

    <!-- firstMainFragment string -->
    <string name="first_ment1"> 오늘 당신이 SAVE할 시간은 </string>
    <string name="first_ment2"> 00 </string>
    <string name="first_ment3"> 시간 </string>
    <string name="first_ment4"> 00 </string>
    <string name="first_ment5"> 분 </string>
    <string name="first_ment6"> 입니다. </string>
    <string name="first_ment7"> 오늘의 시간 관리 일정 </string>
    <string name="first_ment8"> ✨ Motivation </string>
    <string name="first_ment9"> 일정 추가하기 </string>
    <string name="first_ment10"> 오늘은 등록된 일정이 없습니다. </string>
    <string name="first_ment11"> 꺾이지 않는 마음 </string>
    <string name="first_ment12"> 저희가 당신을 위해 준비한 한마디에요. \n 여기를 긁어보세요! </string>
    <string name="first_ment13"> 2022년 11월 11일 </string>

    <string name="first_tmp_fail"> 임시 저장 정보를 불러오기를 실패했습니다. </string>
    <string name="first_no_store"> 저장해야 하는 시간이 없어요. </string>
    <string name="first_yes_store1"> 저장하지 않은 시간이 </string>
    <string name="first_yes_store2"> 개 있어요! </string>

    <!-- WhatToDoSaveBottomSheet string -->
    <string name="whattodobottomsheet_ment1"> 자기 계발을 한 개 선택해주세요. </string>
    <string name="whattodobottomsheet_ment2"> 저장하시려는 정보가 맞나요? </string>
    <string name="whattodobottomsheet_ment3"> 2022년 11월 10일 </string>
    <string name="whattodobottomsheet_ment4"> 오전 11시 11분 </string>
    <string name="whattodobottomsheet_ment5"> ~ </string>
    <string name="whattodobottomsheet_ment6"> 📃  저장 시간:  </string>
    <string name="whattodobottomsheet_ment7"> 1시간 10분  </string>
    <string name="whattodobottomsheet_ment8"> 무엇을 하셨는지 선택해주세요! </string>
    <string name="whattodobottomsheet_ment9"> 선택한 자기 계발이 없습니다. </string>
    <string name="whattodobottomsheet_ment10"> 저장 </string>
    <string name="whattodobottomsheet_ment11"> 취소 </string>

    <!-- secondMainFragment1,2 string -->
    <string name="second_ment1"> 날짜별 통계 </string>
    <string name="second_ment2"> 이번달 통계 </string>
    <string name="second_ment3"> 월별 통계 </string>
    <string name="second_ment4"> 연도별 통계 </string>
    <string name="second_ment5"> 날짜별 통계 </string>
    <string name="second_ment6"> 분야별 통계 </string>
    <string name="second_ment7"> 이번년도 통계 </string>


    <!-- forthMainFragment string -->
    <string name="cheer_message"> 응원 메시지를 입력해주세요. </string>
    <string name="no_information"> 정보를 받아올 수 없습니다. </string>

    <!-- fifthMainFragment string -->
    <string name="get_user_info_fail"> 개인 정보를 불러오는데 실패했습니다. </string>
    <string name="logout_success"> 로그 아웃 완료 </string>


    <!-- 임시 저장 -> 데이터 베이스 저장 관련 string -->
    <string name="update_day_fail"> 해당 일에 시간을 업데이트 할 수 없습니다. </string>
    <string name="update_month_fail"> 해당 달에 시간을 업데이트 할 수 없습니다. </string>
    <string name="update_year_fail"> 해당 년에 시간을 업데이트 할 수 없습니다. </string>
    <string name="load_tmpTime_fail"> 임시 저장된 시간을 불러 올 수 없습니다. </string>
    <string name="no_time_input"> 입력할 시간이 없습니다. </string>
    <string name="whatToDo_update_time_fail"> 시간 업데이트를 실패했습니다. </string>

    <!-- calendar 스케줄 입력 관련 -->
    <string name="destination_input_fail"> 가는 곳을 입력하세요. </string>
    <string name="date_list_input_fail"> 기간을 입력하세요. </string>
    <string name="first_start_time_fail"> 출발 시간을 입력하세요. </string>
    <string name="first_end_time_fail"> 도착 시간을 입력하세요. </string>
    <string name="second_start_time_fail"> 목적지에서의 출발 시간을 입력하세요. </string>
    <string name="second_end_time_fail"> 목적지에서의 도착 시간을 입력하세요. </string>
    <string name="day_select_fail"> 기간에 해당하는 요일을 입력해주세요. </string>

    <!-- 랭킹 관련 -->
    <string name="rank_update_fail"> 랭킹 업데이트를 실패하였습니다. </string>

    <!-- alarm 관련 -->
    <string name="no_schedule"> 오늘 일정은 없습니다. </string>

    <!-- 자기 계발 -->
    <string name="self_dev1"> 독서 </string>
    <string name="self_dev2"> 영어 듣기 </string>
    <string name="self_dev3"> 시사 공부 </string>
    <string name="self_dev4"> 전공 과제 </string>
    <string name="self_dev5"> 뉴스 </string>
    <string name="self_dev6"> 독서 </string>
    <string name="self_dev7"> 독서 </string>

    <!-- menu -->
    <string name="home"> 홈 </string>
    <string name="stat"> 통계 </string>
    <string name="calendar"> 캘린더 </string>
    <string name="rank"> 랭킹 </string>
    <string name="my"> my </string>


</resources>